<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="@drawable/back2"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"

        >

        <!--Put form controls here-->

        <TextView
            style="@style/TextViewAppearance.Headline2"

            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stitle"
            android:layout_marginTop="10dp"

        android:textAlignment="center"
            >
        </TextView>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/sname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:layout_marginTop="50dp">
        </EditText>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_colname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EditTextCompany"
                android:layout_height="wrap_content"
                android:hint="@string/scomp_name"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/EditRequirements"
                android:layout_height="wrap_content"
                android:hint="Requirements"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditTextLocation"
            android:layout_height="wrap_content"
            android:hint="@string/slocation"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditTextMobile"
            android:layout_height="wrap_content"
            android:hint="@string/smobno"
            android:inputType="phone"
            android:layout_width="fill_parent">
        </EditText>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/semail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EditTextPurpose"
                android:layout_height="wrap_content"
                android:hint="Auditing Domain"
                android:inputType="text"
                android:layout_width="fill_parent">
            </EditText>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:onClick="sendFeedback"
            android:layout_gravity="center"
            android:layout_width="200dp">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="NOTE:"
            android:id="@+id/note"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="VQMS invites Corporate and Industries towards Audit Implementation. Audit is a process towards Gaps Analysis. Few of the widely used Audit standards are : ISO 9001 QMS, EMS-14001, OHSAS-18001, ISMS-27001, Energy Mgmt-50001,  LEAN Six Sigma, CMMi, .. more"
            android:id="@+id/notesub"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="#000000"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/send"
                android:src="@drawable/go"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:layout_width="400dp"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="www.vqms.co.in"
                android:id="@+id/webadd"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="10dp"
                android:textColor="#008bca"
                />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
