<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="@drawable/back2"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"

        >

        <!--Put form controls here-->

        <TextView
            style="@style/TextViewAppearance.Headline2"

            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ctitle"
            android:textAlignment="center"
            android:layout_marginTop="10dp"

        >
        </TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/cname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:layout_marginTop="50dp">
        </EditText>
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_colname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EditTextDomain"
                android:layout_height="wrap_content"
                android:hint="@string/cdomain"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/EditRequirements"
                android:layout_height="wrap_content"
                android:hint="Requirements"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/EditTextLocation"
                android:layout_height="wrap_content"
                android:hint="@string/clocation"
                android:inputType="textPostalAddress"
                android:layout_width="fill_parent">
            </EditText>
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditTextMobile"
            android:layout_height="wrap_content"
            android:hint="@string/cmobno"
            android:inputType="phone"
            android:layout_width="fill_parent">
        </EditText>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/cemail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EditTextPurpose"
                android:layout_height="wrap_content"
                android:hint="Purpose of Accreditation"
                android:inputType="text"
                android:layout_width="fill_parent">
            </EditText>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:onClick="sendFeedback"
            android:layout_gravity="center"
            android:layout_width="200dp">

        </Button>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="NOTE:"
            android:id="@+id/note"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="VQMS invites Schools, Colleges and Universities towards National and International Accreditations. Accreditation is a Institutional recognition towards following standards and processes. Few of the Accreditaion bodies are NAAC, NBA, NABET, AACBS, WASAC, IAO, QS, IACB ..more"
            android:id="@+id/notesub"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="#000000"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/send"
                android:src="@drawable/go"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:layout_width="400dp"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="www.vqms.co.in"
                android:id="@+id/webadd"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="10dp"
                android:textColor="#008bca"
                />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
